kubernetes-config/java-multi-thread-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: java-multi-thread
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-multi-thread
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: java-multi-thread
    spec:
      imagePullSecrets:
      - name: docker-azure-registry
      containers:
        - name: java-multi-thread
          image: *IMAGE_TAG*
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          resources:
            limits:
              memory: 3Gi
            requests:
              memory: 3Gi
      nodeSelector:
        nodetype: analytics
