kubernetes-config/java-multi-thread-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: java-multi-thread
  namespace: backend
spec:
  selector:
    app: java-multi-thread
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
